[package]
name = "px-recount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dicom = "0.5.4"
redis = "0.23.0"
redis-derive = "0.1.7"
time = { version = "0.3.23", features = ["formatting"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
