[package]
name = "px-recount"
version = "3.11.0-rc1"
description = "storescp series file counter for pypx \"RE\" mode."
license = "MIT"
edition = "2021"
repository = "https://github.com/FNNDSC/pypx/"
publish = false

[dependencies]
anyhow = "1.0.71"
dicom = "0.5.4"
redis = "0.23.0"
redis-derive = "0.1.7"
time = { version = "0.3.23", features = ["formatting"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
